RESOLVED FIXED121669
Buildfix after r156133 for !ENABLE(WORKERS) platforms
https://bugs.webkit.org/show_bug.cgi?id=121669
Summary Buildfix after r156133 for !ENABLE(WORKERS) platforms
Csaba Osztrogonác
Reported 2013-09-20 03:22:45 PDT
http://trac.webkit.org/changeset/156133 broke the !ENABLE(WORKERS) builds, because it was incomplete. Fix is coming soon.
Attachments
Patch (2.25 KB, patch)
2013-09-20 03:28 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2013-09-20 03:23:02 PDT
build log: /ramdisk/qt-linux-release-minimal/build/Source/WebCore/platform/ThreadGlobalData.cpp: In function 'WebCore::ThreadGlobalData& WebCore::threadGlobalData()': /ramdisk/qt-linux-release-minimal/build/Source/WebCore/platform/ThreadGlobalData.cpp:110:44: error: expected type-specifier before 'ThreadSpecific' /ramdisk/qt-linux-release-minimal/build/Source/WebCore/platform/ThreadGlobalData.cpp:110:44: error: cannot convert 'int*' to 'WebCore::ThreadGlobalData*' in assignment /ramdisk/qt-linux-release-minimal/build/Source/WebCore/platform/ThreadGlobalData.cpp:110:44: error: expected ';' before 'ThreadSpecific' /ramdisk/qt-linux-release-minimal/build/Source/WebCore/platform/ThreadGlobalData.cpp:111:32: error: no match for 'operator*' in '** WebCore::ThreadGlobalData::staticData' /ramdisk/qt-linux-release-minimal/build/Source/WebCore/platform/ThreadGlobalData.cpp:112:1: error: control reaches end of non-void function [-Werror=return-type]
Csaba Osztrogonác
Comment 2 2013-09-20 03:28:43 PDT
Csaba Osztrogonác
Comment 3 2013-09-20 04:34:59 PDT
Note You need to log in before you can comment on or make changes to this bug.