Buildfix after r156133 for !ENABLE(WORKERS) platforms https://bugs.webkit.org/show_bug.cgi?id=121669

Reviewed by Antti Koivisto.

* platform/ThreadGlobalData.cpp:
* platform/ThreadGlobalData.h:

Canonical link: https://commits.webkit.org/139665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156150 268f45cc-cd09-0410-ab3c-d52691b4dbfc